# i18n-counter

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: run_builds.yaml
docs/: index.md  modules.md
i18n_counter/: __init__.py  analysis_json.py  config.py  dao-i18n-badges.py  foo.py  i18n-counter.py  i18n_counter.py  record.txt
tests/: test_foo.py
